// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.assist.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/assist/v1;assist";

// AssistantViewMode is the way the assistant is displayed.
enum AssistantViewMode {
  ASSISTANT_VIEW_MODE_UNSPECIFIED = 0;
  // DOCKED is the assistant is docked to the right hand side of the screen.
  ASSISTANT_VIEW_MODE_DOCKED = 1;
  // POPUP is the assistant is displayed as a popup.
  ASSISTANT_VIEW_MODE_POPUP = 2;
  // POPUP_EXPANDED is the assistant is displayed as a popup and expanded.
  ASSISTANT_VIEW_MODE_POPUP_EXPANDED = 3;
  // POPUP_EXPANDED_SIDEBAR_VISIBLE is the assistant is displayed as a popup and expanded with the sidebar visible.
  ASSISTANT_VIEW_MODE_POPUP_EXPANDED_SIDEBAR_VISIBLE = 4;
}

// AssistantUserPreferences is a collection of different usability settings for the frontend.
message AssistantUserPreferences {
  // PreferredLogins is an array of the logins a user would prefer to use when running a command, ordered by preference.
  repeated string preferred_logins = 1;
  // ViewMode is the way the assistant is displayed.
  AssistantViewMode view_mode = 2;
}
